fix huge weapon icons on small devices

--- a/docs/v2/main.css
+++ b/docs/v2/main.css
@@ -452,7 +452,8 @@ button {
     */
 
     .tags.weapons .button>img {
-        width: 100%
+        width: 100%;
+        max-width: 110px;
     }
 }
 
